@@ -31,6 +31,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Changed Gremlin grammar to make use of `g` to spawn child traversals a syntax error.
 * Added `unexpected-response` handler to `ws` for `gremlin-javascript`
 * Fixed bug in `TinkerTransactionGraph` where a read-only transaction may leave elements trapped in a "zombie transaction".
+* Fixed issue in `gremlin-console` where it couldn't accept plugin files that included empty lines or invalid plugin names.
 
 [[release-3-7-3]]
 === TinkerPop 3.7.3 (October 23, 2024)
